--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "1.1.13",
     "ng2-file-upload": "^1.3.0",
+    "ng2-opd-popup": "^1.1.21",
     "ng2-smart-table": "1.2.2",
     "ng2-tree": "2.0.0-rc.4",
     "ngx-echarts": "2.0.1",
